--- a/languages/stack/forth/self.org
+++ b/languages/stack/forth/self.org
@@ -4,14 +4,22 @@
   - Author: Charles H. Moore (aka Chuck Moore) https://en.wikipedia.org/wiki/Charles_H._Moore
   - 1970-
 
+- book https://leanpub.com/readevalprintlove003/read#leanpub-auto-russ-forth-a-simple-forth-in-ruby
 - https://www.btbytes.com/forth.html
-- article 17 | https://hackaday.com/2017/01/27/forth-the-hackers-language/
-- article 23 | http://ratfactor.com/forth/the_programming_language_that_writes_itself.html
-- article 19 | https://blog.information-superhighway.net/what-the-hell-is-forth
 - how to write a forth?
   http://git.annexia.org/?p=jonesforth.git;a=blob;f=jonesforth.S
   http://git.annexia.org/?p=jonesforth.git;a=blob;f=jonesforth.f
+- rpi forth https://github.com/organix/pijFORTHos
 
+* commands
+|------+----------------------|
+| swap |                      |
+| dup  |                      |
+| drop | trashes top of stack |
+| emit |                      |
+| .    | pop                  |
+| .s   | shows stack          |
+|------+----------------------|
 * snippets
 |----------------+-------+-------------------------------------|
 | .s             |       | show stack                          |
