--- a/languages/stack/self.org
+++ b/languages/stack/self.org
@@ -6,5 +6,8 @@
     - Ethereum EVM
 
 - list of programming languages https://concatenative.org/wiki/view/Front%20Page
+- https://github.com/JohnEarnest/Mako
+  - language: maker
+  - vm
 - article 12 | Why Concatenative Programming Matters
   http://evincarofautumn.blogspot.com/2012/02/why-concatenative-programming-matters.html
