--- a/languages/pascal/pascal.org
+++ b/languages/pascal/pascal.org
@@ -1,5 +1,8 @@
-- https://en.wikipedia.org/wiki/Pascal_(programming_language)
 - https://en.wikipedia.org/wiki/Object_Pascal
+- https://en.wikipedia.org/wiki/Pascal_(programming_language)
+  - 1970-
+  - Author: Niklaus Pascal
+  - typing: static/strong/safe
 
 - https://github.com/Fr0sT-Brutal/awesome-pascal
 
