--- a/languages/tcl/tcl.org
+++ b/languages/tcl/tcl.org
@@ -1,3 +1,7 @@
+- https://en.wikipedia.org/wiki/Tcl
+  - Author: John Ousterhout
+  - 1988-
+
 - yasnippets https://github.com/yangwen0228/unimacs/tree/bbeb3195000d8c1fd8ba436b47aa65d868769206/utils/snippets/tcl-mode
 
 * Language
