--- a/languages/basic.org
+++ b/languages/basic.org
@@ -8,3 +8,19 @@
   - Authors: John G. Kemeny, Thomas E. Kurtz
   - *BASIC, is a family of languages
   - Inspired by fortran
+
+* language
+
+- variables
+  - can be up to characters length
+  - b      for numbers
+  - c(2)   for arrays
+  - d(1,2) for matrix
+  - e$     for strings
+  - f$(1)  for array of strings
+
+- operators
+  -  =  equal
+  - <> unequal
+  - or
+  - and
