--- a/languages/sh/self.org
+++ b/languages/sh/self.org
@@ -13,6 +13,8 @@
   - home https://saitoha.github.io/libsixel/
   - tmux fork/rant https://github.com/csdvrx/sixel-tmux
 
+- tool: html https://github.com/ericchiang/pup
+- tool: yaml/json/xml/csv/toml https://github.com/mikefarah/yq
 - tool: visualization https://github.com/saulpw/visidata https://www.visidata.org/
 - tool: awk like in cli, with haskell flavor https://github.com/gelisam/hawk
 - tool: json to grep-able format https://github.com/tomnomnom/gron
