--- a/languages/smalltalk.org
+++ b/languages/smalltalk.org
@@ -1,3 +1,6 @@
+- wiki https://en.wikipedia.org/wiki/Smalltalk
+  - 1972-
+  - Authors: Adele Goldberg, Dan Ingalls, Alan Kay
 - https://wiki.xxiivv.com/site/smalltalk.html
 - By the Bluebook implementation of Smalltalk-80  https://github.com/dbanay/Smalltalk
 - Libraries https://github.com/pharo-open-documentation/awesome-pharo
